Add header tag and the font family link

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
   <main>
-    <nav>
-      <div class="logo">
-        <a href="#">My logo</a>
-      </div>
-      <div class="menu-button">
-        <img src="/images/Union.jpg" alt="hamburger-button">
-      </div>
-    </nav>
+    <header>
+      <nav>
+        <div class="logo">
+          <a href="#">My logo</a>
+        </div>
+        <div class="menu-button">
+          <img src="/images/Union.jpg" alt="hamburger-button">
+        </div>
+      </nav>
+    </header>
     <section>
       <div class="title">
         <h1>I’m Mariane
