Wrap the icons into anchor tags

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <div class="logo">
-          <a href="#">My logo</a>
+          <a href="#">My Logo</a>
         </div>
         <div class="menu-button">
           <img src="/images/Union.jpg" alt="hamburger-button">
@@ -32,11 +32,11 @@ Glad to see you!</h1>
       </div>
       <div class="socials">
         <ul>
-          <li class="twitter"><img src="/images/twitter.jpg" alt="twitter"></li>
-          <li class="linkedin"><img src="/images/Linkedin-icon.jpg" alt="linkedin"></li>
-          <li class="mail"><img src="/images/mail.jpg" alt="mail"></li>
-          <li class="github"><img src="/images/github.jpg" alt="github"></li>
-          <li class="peace"><img src="/images/peace.jpg" alt="peax"></li>
+          <li class="twitter"><a href="#"><img src="/images/twitter.jpg" alt="twitter"></a></li>
+          <li class="linkedin"><a href="#"><img src="/images/Linkedin-icon.jpg" alt="linkedin"></a></li>
+          <li class="mail"><a href="#"><img src="/images/mail.jpg" alt="mail"></a></li>
+          <li class="github"><a href="#"><img src="/images/github.jpg" alt="github"></a></li>
+          <li class="peace"><a href="#"><img src="/images/peace.jpg" alt="peax"></a></li>
         </ul>
       </div>
     </section>
