Add the cards and about section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <main>
-    <header>
+    <div class="heading-header">
+      <header>
       <nav>
         <div class="logo">
           <a href="#">My Logo</a>
@@ -19,7 +20,7 @@
         </div>
       </nav>
     </header>
-    <section>
+    <section class="section1">
       <div class="title">
         <h1>I’m Mariane
 Glad to see you!</h1>
@@ -38,6 +39,261 @@ Glad to see you!</h1>
           <li class="github"><a href="#"><img src="./images/github.jpg" alt="github"></a></li>
           <li class="peace"><a href="#"><img src="./images/peace.jpg" alt="peax"></a></li>
         </ul>
+      </div>
+    </section>
+    </div>
+    <section class="cards">
+      <div class="card1">
+        <div class="container">
+          <div class="placeholder1">
+            <img src="./images/Snapshoot_Portfolio.png" alt="placeholder-1">
+          </div>
+          <div class="subtitle">
+            <h3>Tonic</h3>
+          </div>
+          <div class="options">
+            <div class="simple-header">
+              <h4>Canopy</h4>
+            </div>
+            <div class="back-end" class="opt">
+              <input type="radio"><p>Back End  Dev</p>
+            </div>
+            <div class="year" class="opt">
+              <input type="radio"><p>2015</p>
+            </div>
+          </div>
+          <div class="information">
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+          </div>
+          <div class="languagess">
+            <div class="html">
+              <button>html</button>
+            </div>
+            <div class="css">
+              <button>css</button>
+            </div>
+            <div class="javascript">
+              <button>javascript</button>
+            </div>
+          </div>
+          <div  class="submit">
+            <button>
+            see project
+          </button>
+          </div>
+        </div>
+        </div>
+      </div>
+      <div class="card1">
+        <div class="container">
+          <div class="placeholder1">
+            <img src="./images/Snapshoot_Portfolio2.png" alt="placeholder-1">
+          </div>
+          <div class="subtitle">
+            <h3>Multi-Post<br>
+Stories</h3>
+          </div>
+          <div class="options">
+            <div class="simple-header">
+              <h4>Canopy</h4>
+            </div>
+            <div class="back-end" class="opt">
+              <input type="radio"><p>Back End  Dev</p>
+            </div>
+            <div class="year" class="opt">
+              <input type="radio"><p>2015</p>
+            </div>
+          </div>
+          <div class="information">
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+          </div>
+          <div class="languagess">
+            <div class="html">
+              <button>html</button>
+            </div>
+            <div class="css">
+              <button>css</button>
+            </div>
+            <div class="javascript">
+              <button>javascript</button>
+            </div>
+          </div>
+          <div  class="submit">
+            <button>
+            see project
+          </button>
+          </div>
+        </div>
+        </div>
+      </div>
+      <div class="card1">
+        <div class="container">
+          <div class="placeholder1">
+            <img src="./images/Snapshoot_Portfolio3.png" alt="placeholder-1">
+          </div>
+          <div class="subtitle">
+            <h3>Tonic</h3>
+          </div>
+          <div class="options">
+            <div class="simple-header">
+              <h4>Canopy</h4>
+            </div>
+            <div class="back-end" class="opt">
+              <input type="radio"><p>Back End  Dev</p>
+            </div>
+            <div class="year" class="opt">
+              <input type="radio"><p>2015</p>
+            </div>
+          </div>
+          <div class="information">
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+          </div>
+          <div class="languagess">
+            <div class="html">
+              <button>html</button>
+            </div>
+            <div class="css">
+              <button>css</button>
+            </div>
+            <div class="javascript">
+              <button>javascript</button>
+            </div>
+          </div>
+          <div  class="submit">
+            <button>
+            see project
+          </button>
+          </div>
+        </div>
+        </div>
+      </div>
+      <div class="card1">
+        <div class="container">
+          <div class="placeholder1">
+            <img src="./images/Snapshoot_Portfolio4.png" alt="placeholder-1">
+          </div>
+          <div class="subtitle">
+            <h3>Multi-Post<br>
+Stories</h3>
+          </div>
+          <div class="options">
+            <div class="simple-header">
+              <h4>Canopy</h4>
+            </div>
+            <div class="back-end" class="opt">
+              <input type="radio"><p>Back End  Dev</p>
+            </div>
+            <div class="year" class="opt">
+              <input type="radio"><p>2015</p>
+            </div>
+          </div>
+          <div class="information">
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+          </div>
+          <div class="languagess">
+            <div class="html">
+              <button>html</button>
+            </div>
+            <div class="css">
+              <button>css</button>
+            </div>
+            <div class="javascript">
+              <button>javascript</button>
+            </div>
+          </div>
+          <div  class="submit">
+            <button>
+            see project
+          </button>
+          </div>
+        </div>
+        </div>
+      </div>      
+    </section>
+    <section class="all-about">
+      <div class="container3">
+        <div class="abouts">
+          <div class="title7">
+            <h3>
+              About <br> Myself
+            </h3>
+          </div>
+          <div class="more-abouts">
+            <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+          </div>
+          <div class="subs">
+            <p>
+              LET’S CONNECT
+            </p>
+          </div>
+          <div class="social-medias">
+              <ul>                
+                <li>
+                  <a href="#"><img src="./images/github.jpg" alt="git"></a>
+                </li>
+                <li>
+                  <a href="#"><img src="./images/Linkedin-icon.jpg" alt="Linkedin-icon"></a>
+                </li>
+                <li>
+                  <a href="#"><img src="./images/peace.jpg" alt="Vector"></a>
+                </li>
+                <li>
+                  <a href="#"><img src="./images/twitter.jpg" alt="twitter"></a>
+                </li>
+                <li>
+                  <a href="#"><img src="./images/mail.jpg" alt="mail"></a>
+                </li>
+             </ul>
+          </div>
+          <div class="about-button">
+            <button>Get my resume</button>
+          </div>
+        </div>
+        <div class="skill-soft">
+          <div class="languages">
+          <div class="lang">
+            <h4>Languages</h4>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z" fill="#5E6C84"/>
+</svg>
+          </div>
+          <div class="tool">
+            <ul class="java1">
+              <li class="java-icon">
+                <img src="./images/js.png" alt="javascript-icon">
+                <p class="labels">JavaSript</p>
+              </li>
+              <li class="html-icon">
+                <img src="./images/html.png" alt="html-icon">
+                <p class="labels">HTML</p>
+              </li>
+              <li class="css-icon">
+                <img src="./images/css.png" alt="css-icon">
+                <p class="labels">CSS</p>
+              </li>
+            </ul>
+          </div>        
+          </div>
+          <div class="frameworks">
+            <div class="frames">
+              <ul>
+                <li>
+                  <p>Frameworks</p>
+                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M9.29289 5.43962C9.68342 5.0491 10.3166 5.0491 10.7071 5.43962L16.7071 11.4396C17.0976 11.8301 17.0976 12.4633 16.7071 12.8538L10.7071 18.8538C10.3166 19.2444 9.68342 19.2444 9.29289 18.8538C8.90237 18.4633 8.90237 17.8301 9.29289 17.4396L14.5858 12.1467L9.29289 6.85384C8.90237 6.46331 8.90237 5.83015 9.29289 5.43962Z" fill="#505F79"/>
+</svg>
+                </li>
+                <li>
+                  <p>Skills</p>
+                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M9.29289 5.43962C9.68342 5.0491 10.3166 5.0491 10.7071 5.43962L16.7071 11.4396C17.0976 11.8301 17.0976 12.4633 16.7071 12.8538L10.7071 18.8538C10.3166 19.2444 9.68342 19.2444 9.29289 18.8538C8.90237 18.4633 8.90237 17.8301 9.29289 17.4396L14.5858 12.1467L9.29289 6.85384C8.90237 6.46331 8.90237 5.83015 9.29289 5.43962Z" fill="#505F79"/>
+</svg>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        </div>
       </div>
     </section>
   </main>
