--- a/index.html
+++ b/index.html
@@ -66,15 +66,17 @@ Glad to see you!</h1>
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
           </div>
           <div class="languagess">
-            <div class="html">
-              <button>html</button>
-            </div>
-            <div class="css">
-              <button>css</button>
-            </div>
-            <div class="javascript">
-              <button>javascript</button>
-            </div>
+            <ul>
+              <li class="html">
+                <button>html</button>
+              </li>
+              <li class="css">
+                <button>css</button>
+              </li>
+              <li class="javascript">
+                <button>javascript</button>
+              </li>
+            </ul> 
           </div>
           <div  class="submit">
             <button>
@@ -108,15 +110,17 @@ Stories</h3>
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
           </div>
           <div class="languagess">
-            <div class="html">
-              <button>html</button>
-            </div>
-            <div class="css">
-              <button>css</button>
-            </div>
-            <div class="javascript">
-              <button>javascript</button>
-            </div>
+            <ul>
+              <li class="html">
+                <button>html</button>
+              </li>
+              <li class="css">
+                <button>css</button>
+              </li>
+              <li class="javascript">
+                <button>javascript</button>
+              </li>
+            </ul> 
           </div>
           <div  class="submit">
             <button>
@@ -149,15 +153,17 @@ Stories</h3>
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
           </div>
           <div class="languagess">
-            <div class="html">
-              <button>html</button>
-            </div>
-            <div class="css">
-              <button>css</button>
-            </div>
-            <div class="javascript">
-              <button>javascript</button>
-            </div>
+            <ul>
+              <li class="html">
+                <button>html</button>
+              </li>
+              <li class="css">
+                <button>css</button>
+              </li>
+              <li class="javascript">
+                <button>javascript</button>
+              </li>
+            </ul> 
           </div>
           <div  class="submit">
             <button>
@@ -191,15 +197,17 @@ Stories</h3>
             <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
           </div>
           <div class="languagess">
-            <div class="html">
-              <button>html</button>
-            </div>
-            <div class="css">
-              <button>css</button>
-            </div>
-            <div class="javascript">
-              <button>javascript</button>
-            </div>
+            <ul>
+              <li class="html">
+                <button>html</button>
+              </li>
+              <li class="css">
+                <button>css</button>
+              </li>
+              <li class="javascript">
+                <button>javascript</button>
+              </li>
+            </ul> 
           </div>
           <div  class="submit">
             <button>
