Add the desktop version skeleton

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         <div class="menu-button">
           <img src="./images/Union.jpg" alt="hamburger-button">
         </div>
+        <div class="reach">
+            <ul class="nav-menu">
+              <li><a href="#" class="nav-link">Portoflio</a></li>
+              <li><a href="#" class="nav-link">About</a></li>
+              <li><a href="#" class="nav-link">Contact</a></li>
+            </ul>
+          </div>
       </nav>
     </header>
     <section class="section1">
@@ -42,13 +49,17 @@ Glad to see you!</h1>
       </div>
     </section>
     </div>
-    <section class="cards">
+    <section class="cards" id="cardis">
       <div class="card1">
         <div class="container">
-          <div class="placeholder1">
+          <div class="placeholder1" id="snap1">
             <img src="./images/Snapshoot_Portfolio.png" alt="placeholder-1">
           </div>
-          <div class="subtitle">
+          <div id="snap2">
+            <img src="./images/Snapshoot1.png" alt="placeholder">
+          </div>
+          <div class="right-obj">
+            <div class="subtitle">
             <h3>Tonic</h3>
           </div>
           <div class="options">
@@ -83,36 +94,48 @@ Glad to see you!</h1>
             see project
           </button>
           </div>
+          </div>
         </div>
         </div>
       </div>
       <div class="card1">
-        <div class="container">
-          <div class="placeholder1">
+        <div class="container" id="left1">
+          <div class="placeholder1" id="snap3">
             <img src="./images/Snapshoot_Portfolio2.png" alt="placeholder-1">
           </div>
-          <div class="subtitle">
-            <h3>Multi-Post<br>
+          <div id="snap4">
+            <img src="./images/Snapshoot2.png" alt="placeholder">
+          </div>
+          <div class="left-obj">
+            <div class="subtitle" id="tit1">
+            <h3>Multi-Post
 Stories</h3>
           </div>
           <div class="options">
-            <div class="simple-header">
+            <div class="simple-header" id="head1">
               <h4>Canopy</h4>
             </div>
+            <div class="simple-header" id="head2">
+              <h4>FACEBOOK</h4>
+            </div>
             <div class="back-end" class="opt">
-              <input type="radio"><p>Back End  Dev</p>
+              <input type="radio"><p id="opt1">Back End  Dev</p><p id="opt2">Full Stack Dev</p>
             </div>
             <div class="year" class="opt">
               <input type="radio"><p>2015</p>
             </div>
           </div>
           <div class="information">
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+            <p id="tex1">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+            <p id="tex2">Experimental content creation feature that allows users to add to an existing story over the course of a day without spamming their friends.</p>
           </div>
           <div class="languagess">
             <ul>
               <li class="html">
                 <button>html</button>
+              </li>
+              <li class="ruby">
+                <button>Ruby on rails</button>
               </li>
               <li class="css">
                 <button>css</button>
@@ -127,35 +150,47 @@ Stories</h3>
             see project
           </button>
           </div>
+          </div>
         </div>
         </div>
       </div>
       <div class="card1">
         <div class="container">
-          <div class="placeholder1">
+          <div class="placeholder1" id="snap5">
             <img src="./images/Snapshoot_Portfolio3.png" alt="placeholder-1">
           </div>
-          <div class="subtitle">
-            <h3>Tonic</h3>
+          <div id="snap6">
+            <img src="./images/Snapshoot3.png" alt="placeholder">
+          </div>
+          <div class="right-obj">
+            <div class="subtitle">
+            <h3 id="tex10">Tonic</h3><h3 id="tex11">Facebook 360</h3>
           </div>
           <div class="options">
-            <div class="simple-header">
+            <div class="simple-header" id="head4">
               <h4>Canopy</h4>
             </div>
+            <div class="simple-header" id="head3">
+              <h4>FACEBOOK</h4>
+            </div>
             <div class="back-end" class="opt">
-              <input type="radio"><p>Back End  Dev</p>
+              <input type="radio"><p id="opt10">Back End  Dev</p><p id="opt11">Full Stack Dev</p>
             </div>
             <div class="year" class="opt">
               <input type="radio"><p>2015</p>
             </div>
           </div>
           <div class="information">
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+            <p id="par1">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+            <p id="par2">Exploring the future of media in Facebook's first Virtual Reality app; a place to discover and enjoy 360 photos and videos on Gear VR.</p>
           </div>
           <div class="languagess">
             <ul>
               <li class="html">
                 <button>html</button>
+              </li>
+              <li class="ruby">
+                <button>Ruby on rails</button>
               </li>
               <li class="css">
                 <button>css</button>
@@ -169,37 +204,47 @@ Stories</h3>
             <button>
             see project
           </button>
+          </div>
           </div>
         </div>
         </div>
       </div>
       <div class="card1">
-        <div class="container">
-          <div class="placeholder1">
+        <div class="container" id="left2">
+          <div class="placeholder1" id="snap7">
             <img src="./images/Snapshoot_Portfolio4.png" alt="placeholder-1">
           </div>
-          <div class="subtitle">
-            <h3>Multi-Post<br>
+          <div id="snap8">
+            <img src="./images/Snapshoot4.png" alt="placeholder">
+          </div>
+          <div class="left-obj">
+            <div class="subtitle">
+            <h3 id="ub1">Multi-Post<br>
 Stories</h3>
+              <h3 id="ub2">Uber Navigation</h3>
           </div>
           <div class="options">
             <div class="simple-header">
-              <h4>Canopy</h4>
+              <h4 id="ub3">Canopy</h4><h4 id="ub4">Uber</h4>
             </div>
             <div class="back-end" class="opt">
-              <input type="radio"><p>Back End  Dev</p>
+              <input type="radio"><p id="opt13">Back End  Dev</p><p id="opt12">Lead Developer</p>
             </div>
             <div class="year" class="opt">
               <input type="radio"><p>2015</p>
             </div>
           </div>
           <div class="information">
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+            <p id="las1">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+            <p id="las2">A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive computer: your car.</p>
           </div>
           <div class="languagess">
             <ul>
               <li class="html">
                 <button>html</button>
+              </li>
+              <li class="ruby">
+                <button>Ruby on rails</button>
               </li>
               <li class="css">
                 <button>css</button>
@@ -213,6 +258,7 @@ Stories</h3>
             <button>
             see project
           </button>
+          </div>
           </div>
         </div>
         </div>
@@ -310,7 +356,7 @@ Stories</h3>
             <h3>Contact me</h3>
           </div>
           <div class="form-description">
-            <p>If you have an application you <br>are interested in developing, a<br> feature that you need built or a<br> project that needs coding. I’d<br>          love to help with it </p>
+            <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d          love to help with it </p>
           </div>
           <div class="form-entry">
              <ul>
